--- a/MongoMigrationWebApp/Components/MigrationSettings.razor
+++ b/MongoMigrationWebApp/Components/MigrationSettings.razor
@@ -18,7 +18,7 @@
                     <input type="checkbox" id="has-uuid" @bind="configuration.HasUuid" />
                 </div>
                 <div class="mb-3">
-                    <label for="chunk-size" class="form-label">Chunk Size (in MB):</label>
+                    <label for="chunk-size" class="form-label">Chunk Size (in MB) for MongoDump:</label>
                     <input type="number" id="chunk-size" class="form-control" @bind="configuration.ChunkSizeInMb" />
                 </div>
 
