--- a/MongoMigrationWebApp/Components/MigrationDetails.razor
+++ b/MongoMigrationWebApp/Components/MigrationDetails.razor
@@ -5,7 +5,7 @@
     <div class="modal-dialog bg-dark">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">@(newMode ? "New Job Details" : "Provide Connections Strings")</h4>
+                <h4 class="modal-title">@(newMode ? "New Job Details" : "Update Connections Strings")</h4>
                 <button type="button" class="btn-close" aria-label="Close" @onclick="@Cancel"></button>
             </div>
             <div class="modal-body">
