--- a/MongoMigrationWebApp/Pages/_Layout.cshtml
+++ b/MongoMigrationWebApp/Pages/_Layout.cshtml
@@ -14,6 +14,8 @@
     <link href="css/app.css" rel="stylesheet" />
     <script src="scripts/site.js"></script>
     <link href="MongoMigrationWebApp.styles.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
