Use d:\home instead of  Path.GetTempPath to store files.

--- a/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
+++ b/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
@@ -102,12 +102,16 @@
                     <td>@unit.DatabaseName</td>
                     <td>@unit.CollectionName</td>                    
                     <td>
-                        @(unit.DumpComplete ? "Sucess" : $"{unit.DumpPercent:F1}%")
+                        <td>
+                            @(unit.SourceStatus == CollectionStatus.NotFound ? "ERROR" : (unit.DumpComplete ? "Success" : $"{unit.DumpPercent:F1}%"))
+                        </td>
                     </td>
                     @if (MigrationJob != null && MigrationJob.UseMongoDump)
                     {
                         <td>
-                            @(unit.RestoreComplete || unit.RestorePercent == 100 ? "Sucess" : $"{unit.RestorePercent:F1}%")
+                            <td>
+                                @(unit.SourceStatus == CollectionStatus.NotFound ? "ERROR" : (unit.RestoreComplete || unit.RestorePercent == 100 ? "Success" : $"{unit.RestorePercent:F1}%"))
+                            </td>
                         </td>
                     }
                     @if (MigrationJob != null && MigrationJob.IsOnline)
