--- a/MongoMigrationWebApp/Pages/_Layout.cshtml
+++ b/MongoMigrationWebApp/Pages/_Layout.cshtml
@@ -9,12 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap-icons.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <script src="scripts/site.js"></script>
+    <script src="scripts/bootstrap5.3.0.bundle.min.js"></script>
     <link href="MongoMigrationWebApp.styles.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
