Make Mongo Driver migrations in Serial- causes Out of Memory issue

--- a/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
+++ b/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
@@ -89,7 +89,7 @@
             }
             @if (MigrationJob != null && MigrationJob.IsOnline)
             {
-                <th>Change Stream Lag</th>
+                <th>Time Since Last Change</th>
             }
         </tr>
     </thead>
