Bug Fix, invalid CollectionName, regex updated. OOM in Changestream Processor.

--- a/MongoMigrationWebApp/Components/ManageCollections.razor
+++ b/MongoMigrationWebApp/Components/ManageCollections.razor
@@ -98,11 +98,17 @@
             // Process collections one by one
             foreach (var fullName in collectionsInput)
             {
-                string[] parts = fullName.Split('.');
-                if (parts.Length != 2) continue;
+                // string[] parts = fullName.Split('.');
+                // if (parts.Length != 2) continue;
 
-                string dbName = parts[0].Trim();
-                string colName = parts[1].Trim();
+                // string dbName = parts[0].Trim();
+                // string colName = parts[1].Trim();
+
+                int firstDotIndex = fullName.IndexOf('.');
+                if (firstDotIndex <= 0 || firstDotIndex == fullName.Length - 1) continue;
+
+                string dbName = fullName.Substring(0, firstDotIndex).Trim();
+                string colName = fullName.Substring(firstDotIndex + 1).Trim();
 
                 var mu = new MigrationUnit(dbName, colName, null);
 
